--- a/5.1_functions/functions_(need).ipynb
+++ b/5.1_functions/functions_(need).ipynb
@@ -1,1 +1,501 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 User-defined functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.1 Named Functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Named functions that return"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### Named functions that don\u2019t return"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.2 Anonymous functions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.3 Optional arguments"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 1.4 The importance of functions?"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### An argument for functions"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["### A word of caution"]}, {"cell_type": "code", "id": "123456", "metadata": {}, "execution_count": null, "outputs": [], "source": ["\n# Your code here\n"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Functions (Need)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "# 1 User-defined functions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1.1 Named Functions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "### Named functions that return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "300dddae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(name):\n",
+    "    if name == 'Batman':\n",
+    "        return 'Hello Batman! So, nice to meet you!'\n",
+    "    else:\n",
+    "        return f'Hello {name}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "566c8a2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Superman!'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting(\"Superman\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d06da769",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Superman!'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting(name = \"Superman\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c107ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Superman!\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet = greeting(name = 'Superman')\n",
+    "print(greet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "353488e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Superman!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(greeting(name = 'Superman'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "665023ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def basic_stats(numbers):\n",
+    "    np_numbers = np.array(numbers) # converts the lists into a numpy array\n",
+    "    my_min = np_numbers.min()\n",
+    "    my_max = np_numbers.max()\n",
+    "    my_mean = np_numbers.mean()\n",
+    "    return my_max, my_min, my_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93428200",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#list_min, list_max, list_mean = basic_stats([1, 2, 3, 4, 5]) what is provided is flipped\n",
+    "\n",
+    "list_max, list_min, list_mean = basic_stats([1, 2, 3, 4, 5])\n",
+    "print(list_max)\n",
+    "print(list_min)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1ec7c4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def basic_stats(numbers):\n",
+    "    np_numbers = np.array(numbers) # converts the lists into a numpy array\n",
+    "    my_min = np_numbers.min()\n",
+    "    my_max = np_numbers.max()\n",
+    "    my_mean = np_numbers.mean()\n",
+    "    return my_min, my_max, my_mean # match the return of the tuple (min, max, mean) to the next line\n",
+    "\n",
+    "list_min, list_max, list_mean = basic_stats([1, 2, 3, 4, 5])\n",
+    "\n",
+    "print(list_min)\n",
+    "print(list_max)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "### Named functions that don’t return"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1.2 Anonymous functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "83e6ad0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Superman!'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_short_function = lambda name: f\"Hello {name}!\"\n",
+    "\n",
+    "my_short_function(name = 'Superman')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "54319ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers=[[9, 0, -10],\n",
+    "         [8, 1, -11],\n",
+    "         [7, 2, -12],\n",
+    "         [6, 3, -13],\n",
+    "         [5, 4, -14],\n",
+    "         [4, 5, -15],\n",
+    "         [3, 6, -16],\n",
+    "         [2, 7, -17],\n",
+    "         [1, 8, -18],\n",
+    "         [0, 9, -19]]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6aed9478",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 9, -19],\n",
+       " [1, 8, -18],\n",
+       " [2, 7, -17],\n",
+       " [3, 6, -16],\n",
+       " [4, 5, -15],\n",
+       " [5, 4, -14],\n",
+       " [6, 3, -13],\n",
+       " [7, 2, -12],\n",
+       " [8, 1, -11],\n",
+       " [9, 0, -10]]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(numbers)\n",
+    "\n",
+    "# The default sort: it looks at the first element of each sub-list\n",
+    "# logic: sort by x[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb75dc1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[9, 0, -10],\n",
+       " [8, 1, -11],\n",
+       " [7, 2, -12],\n",
+       " [6, 3, -13],\n",
+       " [5, 4, -14],\n",
+       " [4, 5, -15],\n",
+       " [3, 6, -16],\n",
+       " [2, 7, -17],\n",
+       " [1, 8, -18],\n",
+       " [0, 9, -19]]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(numbers, key=lambda x: x[1])\n",
+    "# The column 2 sort\n",
+    "# the lambda function here tells Python: \"ignore the first number, only look at the element at index 1\"\n",
+    "# the result is the original list with 0 being the smallest in the 2nd column and 9 the largest in the 2nd column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36fbdd68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 9, -19],\n",
+       " [1, 8, -18],\n",
+       " [2, 7, -17],\n",
+       " [3, 6, -16],\n",
+       " [4, 5, -15],\n",
+       " [5, 4, -14],\n",
+       " [6, 3, -13],\n",
+       " [7, 2, -12],\n",
+       " [8, 1, -11],\n",
+       " [9, 0, -10]]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(numbers, key=lambda x: sum(x))\n",
+    "\n",
+    "# lambda calculates the total sum of each sub-list before deciding where to place it in the final list\n",
+    "# logic: sort by the result of value1 + value2 + value3\n",
+    "# first element:sum is -10\n",
+    "# last element: sum is -1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1.3 Optional arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6c400d67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greeting(name='no one'):\n",
+    "    if name == 'Batman':\n",
+    "        return 'Hello Batman! So, nice to meet you!'\n",
+    "    else:\n",
+    "        return f'Hello {name}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "604927cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello no one!'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greeting()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a2be1ac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am Batman!\n",
+      "I---am---Batman!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using default values\n",
+    "print('I', 'am', 'Batman!')\n",
+    "# Specifying an optional argument\n",
+    "print('I', 'am', 'Batman!', sep='---')  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "## 1.4 The importance of functions?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "### An argument for functions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "### A word of caution"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.11"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
