--- a/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
+++ b/2.2_fundamentals__exercises/fundamentals_(need)_exercises.ipynb
@@ -115,7 +115,7 @@
    "id": "c17b94c6",
    "metadata": {},
    "source": [
-    "5/2 performs a division with output as a float in 1 decimal place"
+    "~~5/2 performs a division with output as a float in 1 decimal place~~"
    ]
   },
   {
@@ -137,6 +137,30 @@
    ],
    "source": [
     "5/2 # Division with output as a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dc999a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n",
+      "0.3333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (Response to Comment)\n",
+    "# Update on Float Division \"/\" - incorrect to state \"output as a float in 1 decimal place\"\n",
+    "x = 5/2\n",
+    "y = 1/3\n",
+    "print(x)\n",
+    "print(y)"
    ]
   },
   {
@@ -236,12 +260,39 @@
    "id": "08d037eb",
    "metadata": {},
    "source": [
-    "5%2 performs a division and ouputs a \"1\" if there is a remainder or decimal places, outputs a \"0\" if it is a whole number"
+    "~~5%2 performs a division and ouputs a \"1\" if there is a remainder or decimal places, outputs a \"0\" if it is a whole number~~"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "fc9c75ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# (Response to Comment)\n",
+    "\n",
+    "5 % 3\n",
+    "\n",
+    "# the modulo operator (%) calculates the remainder of the division\n",
+    "# 3 x 1 then 5 - 3 = 2\n",
+    "# outputs: 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "952c9039",
    "metadata": {},
    "outputs": [
@@ -251,7 +302,7 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,6 +393,31 @@
    ],
    "source": [
     "4%3 # Even/Odd produces 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c002aa69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is odd.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test for even or odd\n",
+    "# x % 2 == 0 is even\n",
+    "# x % 2 == 1 is odd\n",
+    "x = 1\n",
+    "if x % 2 == 0:\n",
+    "    print(f\"{x} is even.\")\n",
+    "else:\n",
+    "    print(f\"{x} is odd.\")"
    ]
   }
  ],
